# libtma

./: CMakeLists.txt  README.md
src/: tma.cpp
